--- a/github_coffee/index.html
+++ b/github_coffee/index.html
@@ -3,9 +3,16 @@
 <head> 
 <title>ZAR</title>
  <link rel="stylesheet" href="style.css">
+ <script src="index.js"></script>
+ <link rel="shortcut icon" href="images/768_oooo.plus.png" type="image/x-icon">
 </head>
 <body>
-    <script src="index.js"></script>
+
+<div class="back">
     
+    <img src="images/2.png" alt="back">
+    
+</div>
+   
 </body>
 </html>
