--- a/github_coffee/search.html
+++ b/github_coffee/search.html
@@ -12,7 +12,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-
 <header>
     <nav id="navbar" class="navbar navbar-expand-sm fixed-top">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
@@ -46,7 +45,7 @@
   </nav>
 </header>
 
-<body>
+<body id="my-body">
   <!-- Your HTML content goes here -->
   <div class="container">
     <div class="search-container">
@@ -71,6 +70,7 @@
   
     <div id="product-container" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
       <!-- Products will be dynamically added here -->
+      
     </div>
   </div>
   
