--- a/github_coffee/index.html
+++ b/github_coffee/index.html
@@ -29,7 +29,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="main.html">HOME</a>
+              <a class="nav-link" href="index.html">HOME</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="types.html">COFFEE INFORMATION</a>
