--- a/github_coffee/index.html
+++ b/github_coffee/index.html
@@ -91,7 +91,7 @@
       <div class="about_us">
         <h1>About us</h1>
         <p class="text"> 
-          Welcome to Caramel Cascade Delight! <br>
+          Welcome to Caramel Cascade Delight!! <br>
           Located in the heart of Mangilik El C1, Caramel Cascade Delight is the brainchild of three passionate individuals: M. Zhuldyz, T. Alik, and I. Rustem. With a shared love for exceptional coffee and a dedication to creating an extraordinary experience, we embarked on a journey to redefine the coffee culture in our community.
           At Caramel Cascade Delight, we believe that coffee is more than just a beverage—it's an art form. Our team of skilled baristas meticulously crafts each cup, combining the finest beans, precise techniques, and a touch of creativity to deliver a moment of pure bliss with every sip.
         <br><br>
