--- a/github_coffee/search.html
+++ b/github_coffee/search.html
@@ -36,7 +36,7 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="#">REGISTRATION FORM</a>
+          <a class="nav-link" href="reg.html">REGISTRATION FORM</a>
         </li>
       </ul>
     </div>
@@ -83,7 +83,8 @@
   
     </div>
   </div>
-  
+  <audio preload="auto" src="jazz/muzapporangespace_Gerald_Marks_Seymor_Simons_-_All_of_Me_67358264.mp3" loop="true" autobuffer>
+  </audio>
   <!-- Add your JavaScript code and external scripts here -->
   <script src="search.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
