--- a/github_coffee/index.html
+++ b/github_coffee/index.html
@@ -47,7 +47,7 @@
       </nav>
     </header>
 
-    <h1 class="title">Caramel Cascade Delight</h1> <i class="fa fa-coffee fa-2x fa-align-center"></i>
+    <h1 class="title">Caramel Cascade Delight</h1> 
     <div class="container">
       <div class="row">
        
