--- a/github_coffee/search.html
+++ b/github_coffee/search.html
@@ -38,6 +38,9 @@
         <li class="nav-item">
           <a class="nav-link" href="reg.html">REGISTRATION FORM</a>
         </li>
+        <li class="nav-item">
+          <button id="muteButton" class="btn-danger" style="margin-top: 10%;" onclick="toggleMute()">Mute/Unmute</button>
+        </li>
       </ul>
     </div>
   </nav>
