--- a/github_coffee/types.html
+++ b/github_coffee/types.html
@@ -39,6 +39,9 @@
         <li class="nav-item">
           <a class="nav-link" href="reg.html">REGISTRATION FORM</a>
         </li>
+        <li class="nav-item">
+          <button id="muteButton" class="btn-danger" style="margin-top: 10%;" onclick="toggleMute()">Mute/Unmute</button>
+        </li>
       </ul>
     </div>
     </nav>
