--- a/github_coffee/index.html
+++ b/github_coffee/index.html
@@ -95,6 +95,23 @@
           Located in the heart of Mangilik El C1, Caramel Cascade Delight is the brainchild of three passionate individuals: M. Zhuldyz, T. Alik, and I. Rustem. With a shared love for exceptional coffee and a dedication to creating an extraordinary experience, we embarked on a journey to redefine the coffee culture in our community.
           At Caramel Cascade Delight, we believe that coffee is more than just a beverage—it's an art form. Our team of skilled baristas meticulously crafts each cup, combining the finest beans, precise techniques, and a touch of creativity to deliver a moment of pure bliss with every sip.
         <br><br>
+        </p>
+        <button>  <a class="btn-primary" href="search.html" class="btn btn-primary" style="margin-bottom: 30px; border-radius: 30px;">Promotion 2+1 | Buy now!</a>
+        </button>
+      </div>
+
+
+      <!--Google map-->
+<div id="map-container-google-1" class="z-depth-1-half map-container d-flex justify-contend-center" style="height: 500px">
+  <iframe src="https://maps.google.com/maps?q=manhatan&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
+    style="border:0" allowfullscreen></iframe>
+</div>
+
+<!--Google Maps-->
+
+      <div class = "about_us">
+        <p>
+
           Creators: Ibragimov Rustem, Tsoy Alik, Myrzagalieva Zhuldyz.
           <br>
           Birth date: 29.05.2023.
