--- a/github_coffee/search.html
+++ b/github_coffee/search.html
@@ -65,7 +65,8 @@
         </div>
       </div>
     </div>
-  
+  <p style="margin-top: -40px;margin-bottom: 40px; text-align: center; font-size: 35px;">Enjoy the atmosphere of comfort and aroma, plunging into the world of coffee with us!</p>
+  <hr>
     <div id="product-container" class="row g-4">
       <!-- Products will be dynamically added here -->
       <!-- Products will be dynamically added here -->
@@ -82,6 +83,18 @@
   </div>
   
     </div>
+    <hr>
+  </div>
+  <div class="about_us">
+    <h1>Caramel Cascade Delight</h1>
+    <p> 
+      
+      Location: Mangilik El C1.
+      <br>
+      Contact number: +7 705 794 4738
+      <br>
+  </p>
+
   </div>
   
   <!-- Add your JavaScript code and external scripts here -->
