--- a/github_coffee/reg.html
+++ b/github_coffee/reg.html
@@ -116,7 +116,7 @@
              
               <center>
               <a href="#">
-                <button type="button" style="border-color:#eef3ee ; width: 50px; border: 15px;" onclick="validateForm()">Send</button>
+                <button type="button" style="border-color:#eef3ee ; width: 100px; border: 15px; background-color: #eef3ee;" onclick="validateForm()">Send</button>
                  <span></span>
               </a></center>
             </form>
